PHASE-02: sign off unit 9 (architecture.rst), after re-proving its central claim with javac